<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pointFour"
    android:paddingVertical="80dp"
    android:paddingHorizontal="30dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/ibReturn"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ibReturn"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTittle4"
            android:textSize="38dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/etWeight4"/>

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="numberDecimal"
            android:hint="@string/etHeight4"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMetric4" />

            <Switch
                android:id="@+id/swSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:showText="false"
                android:splitTrack="false" />

            <TextView
                android:id="@+id/tvEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEnglish4" />
        </TableRow>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvResult4"
        android:layout_marginTop="44dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvResult2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvResult4"
        android:textAlignment="center"/>

    <Button
            android:id="@+id/btCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btCalculate4"
            android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange3"/>
</LinearLayout>